@@ -1,3 +1,5 @@
+2016/11/11	Allow selection of RA source address. <Robin H. Johnson>
+
 2016/09/24	Release v2.15
 
 2016/09/18	Moved auto prefix code from config file parse to send_ra.
